--- a/app/src/main/res/layout/fragment_advanced.xml
+++ b/app/src/main/res/layout/fragment_advanced.xml
@@ -21,6 +21,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
+                android:textColor="@color/darkBlue"
+                android:textSize="20sp"
                 android:text="يمكنك اختيار أي فئة للبحث أو يمكنك الجمع بينها"
                 android:textStyle="bold" />
 
@@ -31,6 +33,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
                 android:text="بالقرب من "
+                android:background="@color/darkPink"
+                android:textColor="@color/white"
                 android:drawableLeft="@drawable/locationpin"
                 android:textStyle="bold"
                 />
@@ -46,6 +50,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="الجنس"
+                android:textColor="@color/darkBlue"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
 
@@ -59,12 +65,16 @@
                     android:id="@+id/radioMale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/darkBlue"
+
                     android:text="ذكر" />
 
                 <RadioButton
                     android:id="@+id/radioFemale"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/darkBlue"
+
                     android:text="أنثى" />
 
 
@@ -88,6 +98,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="30dp"
                 android:text="المواد:"
+                android:textColor="@color/darkBlue"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <Spinner
@@ -101,7 +113,8 @@
                 android:id="@+id/button1"
                 android:layout_width="354dp"
                 android:layout_height="wrap_content"
-
+                android:background="@color/darkPink"
+                android:textColor="@color/white"
                 android:layout_marginTop="30dp"
                 android:text="بحث"
                 android:textStyle="bold" />
