--- a/app/src/main/res/layout/fragment_name_search.xml
+++ b/app/src/main/res/layout/fragment_name_search.xml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".NameSearch">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
         <LinearLayout
@@ -32,7 +35,6 @@
 
 
 
-
             <ListView
                 android:id="@+id/list1"
                 android:layout_width="match_parent"
@@ -43,5 +45,5 @@
 
 
         </LinearLayout>
-
+</ScrollView>
 </FrameLayout>
