--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -16,6 +16,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#353535" />
+        android:color="@color/darkPink" />
 
 </shape>
