--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -36,7 +36,8 @@
                     android:layout_centerInParent="true"
                     android:layout_marginLeft="120dp"
                     android:text="أهلا بك"
-                    android:textSize="34sp" />
+                    android:textColor="@color/darkBlue"
+                    android:textSize="25sp" />
 
 
                 <LinearLayout
@@ -47,74 +48,64 @@
 
                     <Button
                         android:id="@+id/instructor"
-                        android:layout_width="0dp"
-                        android:textSize="34sp"
-                        android:layout_height="match_parent"
+                        android:layout_width="35dp"
+                        android:layout_height="173dp"
                         android:layout_marginBottom="5sp"
                         android:layout_marginLeft="2sp"
                         android:layout_marginRight="5sp"
                         android:layout_marginTop="10sp"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
+                        android:background="@color/darkPink"
                         android:padding="5dp"
-                        android:text="الأساتذة"
                         android:scaleType="fitXY"
-                         />
+
+                        android:text="الأساتذة"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
 
                     <Button
                         android:id="@+id/student"
-                        android:layout_width="0dp"
-                        android:textSize="34sp"
-                        android:layout_height="match_parent"
+                        android:layout_width="35dp"
+                        android:layout_height="173dp"
                         android:layout_marginBottom="5sp"
+
                         android:layout_marginLeft="2sp"
                         android:layout_marginRight="5sp"
                         android:layout_marginTop="10sp"
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
+                        android:background="@color/darkPink"
                         android:padding="5dp"
-                        android:text="الطلاب"
                         android:scaleType="fitXY"
-                         />
+                        android:text="الطلاب"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="155dp"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/subject"
-                        android:layout_width="0dp"
-                        android:textSize="34sp"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="5sp"
-                        android:layout_marginLeft="2sp"
-                        android:layout_marginRight="5sp"
-                        android:layout_marginTop="10sp"
-                        android:layout_weight="1"
-                        android:adjustViewBounds="true"
-                        android:padding="5dp"
-                        android:text="المواد"
-                        android:scaleType="fitXY"
-                        />
-
-                    <Button
                         android:id="@+id/blackboard"
-                        android:layout_width="0dp"
-                        android:textSize="34sp"
-                        android:layout_height="match_parent"
+                        android:layout_width="35dp"
+                        android:layout_height="173dp"
                         android:layout_marginBottom="5sp"
                         android:layout_marginLeft="2sp"
                         android:layout_marginRight="5sp"
                         android:layout_marginTop="10sp"
+
                         android:layout_weight="1"
                         android:adjustViewBounds="true"
+                        android:background="@color/darkPink"
                         android:padding="5dp"
                         android:scaleType="fitXY"
                         android:text="منصة الأسئلة"
-                         />
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
@@ -140,7 +131,8 @@
             android:id="@+id/buttonLogout"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-
+            android:textColor="@color/white"
+android:background="@color/darkPink"
             android:layout_gravity="center_horizontal"
             android:fontFamily="sans-serif"
             android:text="تسجيل الخروج"
