--- a/app/src/main/res/layout/content_notifications.xml
+++ b/app/src/main/res/layout/content_notifications.xml
@@ -7,29 +7,46 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".notifications"
     tools:showIn="@layout/app_bar_instructor_main">
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/container"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/darkBlue"
+            android:layout_marginTop="60dp"
+
+            android:textSize="20sp"
+            android:text="الحجوزات :"/>
+
+
     <ListView
         android:id="@+id/list2"
-        android:layout_marginTop="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="5"
         ></ListView>
 
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/darkBlue"
+            android:textSize="20sp"
+            android:text="الإلغاء :"/>
 
     <ListView
         android:id="@+id/list3"
-        android:layout_marginTop="60dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="5"></ListView>
 
     </LinearLayout>
-
+  </ScrollView>
 </RelativeLayout>
