--- a/app/src/main/res/layout/activity_sign_up_student.xml
+++ b/app/src/main/res/layout/activity_sign_up_student.xml
@@ -1,136 +1,122 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SignUpStudentActivity">
+<?xml version="1.0" encoding="UTF-8"?>
+
+    <android.support.constraint.ConstraintLayout tools:context=".SignUpStudentActivity" android:background="#e6f2ff" android:layout_height="fill_parent" android:layout_width="fill_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="تسجيل الطالب"
+    <ScrollView android:layout_height="match_parent" android:layout_width="match_parent" tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp">
 
 
-        />
-
-    <TextView
-        android:textAlignment="center"
-        android:text="لديك حساب مسبقاُ؟؟ اضغط هنا"
-        android:id="@+id/textViewSignin2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-        <Button
-            android:layout_margin="15dp"
-            android:id="@+id/buttonContinueToLocation2"
-            android:text="فضلاً اختر موقعك من الخارطة"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:layout_centerVertical="true" android:layout_centerHorizontal="true">
 
 
-    <EditText
-        android:layout_margin="15dp"
-        android:inputType="textEmailAddress"
-        android:hint="فضلاً أدخل ايميل"
-        android:id="@+id/editTextEmailStudent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:layout_margin="15dp"
-        android:inputType="textPassword"
-        android:hint="فضلاً أدخل كلمة مرور"
-        android:id="@+id/editTextPasswordStudent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-        <EditText
-            android:id="@+id/editTextFirstNameStudent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:hint="فضلاً أدخل اسمك الأول" />
+    <android.support.design.widget.AppBarLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@+id/appBarLayout">
 
 
-        <EditText
-            android:id="@+id/editTextLastNameStudent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:hint="فضلاً أدخل اسم شهرتك" />
-        <TextView
-            android:text="فضلاً اختر تاريخ ميلادك"
-            android:id="@+id/textViewDOBStudent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <DatePicker
-            android:id="@+id/datePickerStudent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:calendarViewShown="false"
-            android:datePickerMode="spinner"
-            android:spinnersShown="true"></DatePicker>
-
-        <TextView
-            android:text="فضلاً اختر جنسك"
-            android:id="@+id/textViewGenderStudent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/radioGroupGender2">
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/male2"
-                android:text="ذكر"/>
-            <RadioButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/female2"
-                android:text="أنثى"/>
-        </RadioGroup>
-
-        <TextView
-            android:text="فضلاً اختر المواد المهتم بتعلمها"
-            android:id="@+id/textViewSubjects"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+    <android.support.v7.widget.Toolbar android:background="#1fabcb" android:layout_height="50dp" android:layout_width="match_parent" android:id="@+id/toolbar" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_scrollFlags="scroll|enterAlways">
 
 
+    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent">
 
-        <com.example.tcc.iteach.MultiSelectionSpinner
-            android:id="@+id/input2"
-            android:layout_width="fill_parent"
-            android:layout_height="40dp"
-            android:layout_margin="2dp" />
+    <TextView android:layout_height="wrap_content" android:layout_width="200dp" android:id="@+id/textView" android:textStyle="bold|italic" android:textSize="25dp" android:textColor="#ffffff" android:textAlignment="center" android:text="تسجيل الطالب" android:padding="5dp" android:layout_centerInParent="true"/>
 
-        <Button
-            android:layout_margin="15dp"
-            android:id="@+id/buttonRegister2"
-            android:text="تسجيل الحساب"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+</RelativeLayout>
 
-    </LinearLayout>
-    </ScrollView>
+</android.support.v7.widget.Toolbar>
+
+</android.support.design.widget.AppBarLayout>
+
+
+    <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
+
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textViewSignin2" android:textSize="13dp" android:textAlignment="center" android:text="لديك حساب مسبقاُ؟؟ اضغط هنا" android:padding="5dp"/>
+
+    <View android:background="@color/white" android:layout_height="3dp" android:layout_width="match_parent" android:id="@+id/v1" android:layout_below="@+id/textViewSignin2"/>
+
+    <Button android:background="@drawable/buttonshape" android:layout_height="35dp" android:layout_width="250dp" android:layout_centerHorizontal="true" android:id="@+id/buttonContinueToLocation2" android:textStyle="bold" android:textSize="16dp" android:textColor="@color/white" android:textAlignment="center" android:text="فضلاً اختر موقعك من الخارطة" android:layout_below="@+id/v1" android:drawablePadding="12dp" android:drawableLeft="@drawable/ic_my_location_black_24dp" android:layout_marginTop="16dp" android:layout_marginBottom="7dp"/>
+
+
+    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_centerHorizontal="true" android:id="@+id/card_1" android:layout_below="@+id/buttonContinueToLocation2" android:layout_marginTop="20dp" app:cardElevation="14dp" app:cardCornerRadius="3dp" android:backgroundTint="#ffffff" android:layout_marginRight="4dp" android:layout_marginLeft="4dp">
+
+
+    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_margin="5dp">
+
+    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editTextEmailStudent" android:textSize="13dp" android:textColor="#000" android:textAlignment="center" android:drawablePadding="12dp" android:drawableLeft="@drawable/ic_email_black_24dp" android:layout_margin="15dp" android:textDirection="ltr" android:inputType="textEmailAddress" android:hint="فضلاً أدخل ايميل"/>
+
+    <View android:background="#1fabcb" android:layout_height="1dp" android:layout_width="match_parent" android:id="@+id/v2" android:layout_below="@+id/editTextEmailStudent" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editTextPasswordStudent" android:textSize="13dp" android:textColor="#000" android:textAlignment="center" android:layout_below="@id/v2" android:drawablePadding="12dp" android:drawableLeft="@drawable/ic_lock_black_24dp" android:layout_margin="15dp" android:textDirection="ltr" android:inputType="textPassword" android:hint="فضلاً أدخل كلمة مرور"/>
+
+    <View android:background="#1fabcb" android:layout_height="1dp" android:layout_width="match_parent" android:id="@+id/v3" android:layout_below="@+id/editTextPasswordStudent" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editTextFirstNameStudent" android:textSize="13dp" android:textColor="#000" android:textAlignment="center" android:layout_below="@id/v3" android:drawablePadding="12dp" android:drawableLeft="@drawable/ic_perm_identity_black_24dp" android:layout_margin="15dp" android:textDirection="ltr" android:hint="فضلاً أدخل اسمك الأول"/>
+
+    <View android:background="#1fabcb" android:layout_height="1dp" android:layout_width="match_parent" android:id="@+id/v5" android:layout_below="@+id/editTextFirstNameStudent" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"/>
+
+    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/editTextLastNameStudent" android:textSize="13dp" android:textColor="#000" android:textAlignment="center" android:layout_below="@id/v5" android:drawablePadding="12dp" android:drawableLeft="@drawable/ic_perm_identity_black_24dp" android:layout_margin="15dp" android:textDirection="ltr" android:hint="فضلاً أدخل اسم شهرتك"/>
+
+</RelativeLayout>
+
+</android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_centerHorizontal="true" android:id="@+id/card_2" android:layout_below="@+id/card_1" android:layout_marginTop="20dp" android:backgroundTint="#FFFDE7">
+
+
+    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_margin="5dp">
+
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textViewDOBStudent" android:textStyle="bold" android:textSize="14dp" android:textAlignment="center" android:text="فضلاً اختر تاريخ ميلادك :" android:padding="5dp" android:layout_marginTop="9dp" android:layout_marginRight="9dp" android:layout_alignParentTop="true" android:layout_alignParentRight="true"/>
+
+    <DatePicker android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_centerHorizontal="true" android:id="@+id/datePickerStudent" android:layout_below="@id/textViewDOBStudent" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" android:spinnersShown="true" android:datePickerMode="spinner" android:calendarViewShown="false"/>
+
+</RelativeLayout>
+
+</android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_centerHorizontal="true" android:id="@+id/card_3" android:layout_below="@+id/card_2" android:layout_marginTop="20dp" android:backgroundTint="#e6f2ff">
+
+
+    <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_margin="4dp">
+
+    <View android:background="#fff" android:layout_height="5dp" android:layout_width="match_parent" android:id="@+id/v6" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"/>
+
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textViewGenderStudent" android:textStyle="bold" android:textSize="14dp" android:text="فضلاً اختر جنسك :" android:layout_below="@id/v6" android:layout_marginTop="10dp" android:layout_alignParentRight="true"/>
+
+
+    <RadioGroup android:layout_height="wrap_content" android:layout_width="200dp" android:id="@+id/radioGroupGender2" android:layout_below="@+id/textViewGenderStudent" android:layout_marginTop="4dp" android:textDirection="rtl" android:layout_alignParentRight="true">
+
+    <RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/male2" android:textSize="14dp" android:text="ذكر" android:textDirection="rtl"/>
+
+    <RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/female2" android:textSize="14dp" android:text="أنثى" android:textDirection="rtl"/>
+
+</RadioGroup>
+
+    <View android:background="#fff" android:layout_height="5dp" android:layout_width="match_parent" android:id="@+id/v7" android:layout_below="@+id/radioGroupGender2" android:layout_marginTop="10dp" android:layout_marginRight="5dp" android:layout_marginLeft="5dp"/>
+
+</RelativeLayout>
+
+</android.support.v7.widget.CardView>
+
+
+    -<android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_centerHorizontal="true" android:id="@+id/card_4" android:layout_below="@+id/card_3" android:layout_marginTop="20dp" app:cardElevation="14dp" app:cardCornerRadius="3dp" android:backgroundTint="#ffffff" android:layout_marginRight="4dp" android:layout_marginLeft="4dp">
+
+
+    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_margin="5dp">
+
+    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/textViewSubjects" android:textStyle="bold" android:textSize="15dp" android:textColor="#1fabcb" android:text=" فضلاً اختر المواد المهتم بتعلمها :" android:padding="14dp" android:textDirection="rtl"/>
+
+    <com.example.tcc.iteach.MultiSelectionSpinner android:layout_height="35dp" android:layout_width="300dp" android:layout_centerHorizontal="true" android:id="@+id/input2" android:padding="4dp" android:layout_below="@+id/textViewSubjects" android:layout_marginBottom="5dp" android:textDirection="rtl"/>
+
+</RelativeLayout>
+
+</android.support.v7.widget.CardView>
+
+    <Button android:background="@drawable/buttonshape" android:layout_height="35dp" android:layout_width="250dp" android:layout_centerHorizontal="true" android:id="@+id/buttonRegister2" android:textStyle="bold" android:textSize="16dp" android:textColor="@color/white" android:textAlignment="center" android:text="تسجيل الحساب" android:layout_below="@id/card_4" android:layout_marginTop="16dp" android:layout_marginBottom="7dp" android:layout_margin="15dp"/>
+
+</RelativeLayout>
+
+</LinearLayout>
+
+</ScrollView>
 
 </android.support.constraint.ConstraintLayout>
