--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -1,55 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".student_main"
-    tools:showIn="@layout/app_bar_student_main"
-    android:orientation="vertical">
+<?xml version="1.0" encoding="UTF-8"?>
+
+    <LinearLayout android:orientation="vertical" app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_student_main" tools:context=".student_main" android:background="#e6f2ff" android:layout_height="fill_parent" android:layout_width="fill_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPagerQuote"
-        android:layout_marginTop="25dp"
-        android:layout_width="match_parent"
-        android:layout_height="260dp">
-    </android.support.v4.view.ViewPager>
+    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="match_parent" android:backgroundTint="#fff" android:layout_marginTop="12dp" app:cardCornerRadius="5dp" app:cardElevation="10dp" android:id="@+id/card_1">
 
-    <TextView
-        android:id="@+id/top3textView"
-        android:layout_marginTop="25dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginRight="20dp"
-        android:text="أفضل 3 أساتذة"
-        android:textStyle="bold"
-        android:gravity="right"
-        android:layout_below="@+id/viewPagerQuote"/>
+    <android.support.v4.view.ViewPager android:layout_height="260dp" android:layout_width="match_parent" android:layout_marginTop="25dp" android:id="@+id/viewPagerQuote"> </android.support.v4.view.ViewPager>
+
+</android.support.v7.widget.CardView>
 
 
-    <com.tomer.fadingtextview.FadingTextView
-        android:id="@+id/top3text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#A4A4A4"
-        android:layout_margin="20dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="20dp"
-        app:texts="@array/text"
-        android:textAlignment="center"
-        android:layout_below="@+id/top3textView"/>
-    <Button
-        android:id="@+id/findInstructor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="ابحث عن أستاذ"
-        android:layout_below="@+id/top3text"
-        android:layout_centerHorizontal="true"
-        />
+    <android.support.v7.widget.CardView android:layout_height="wrap_content" android:layout_width="match_parent" android:backgroundTint="#FFFDE7" android:layout_marginTop="20dp" app:cardCornerRadius="12dp" app:cardElevation="20dp" android:id="@+id/card_2" android:layout_marginRight="20dp" android:layout_marginLeft="20dp" android:layout_centerHorizontal="true" android:layout_below="@+id/card_1">
+
+
+    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_margin="5dp">
+
+    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/top3textView" android:layout_marginRight="20dp" android:layout_centerHorizontal="true" android:textAlignment="center" android:padding="14dp" android:textDirection="rtl" android:textColor="#e29c9c" android:gravity="right" android:textStyle="bold" android:text="أفضل 3 أساتذة :" android:textSize="20sp"/>
+
+    <com.tomer.fadingtextview.FadingTextView android:layout_height="35dp" android:layout_width="300dp" android:id="@+id/top3text" android:layout_centerHorizontal="true" android:layout_below="@+id/top3textView" android:textAlignment="center" android:padding="4dp" android:textDirection="rtl" android:layout_marginBottom="4dp" app:texts="@array/text"/>
+
+</RelativeLayout>
+
+</android.support.v7.widget.CardView>
+
+    <Button android:background="@drawable/buttonshape" android:layout_height="35dp" android:layout_width="250dp" android:layout_marginTop="40dp" android:id="@+id/findInstructor" android:layout_centerHorizontal="true" android:textAlignment="center" android:textColor="@color/white" android:textStyle="bold" android:text="ابحث عن أستاذ" android:textSize="16dp" android:layout_marginBottom="7dp" android:drawablePadding="12dp" android:drawableLeft="@drawable/ic_search_black_24dp" android:layout_gravity="center"/>
 
 </LinearLayout>
